# ros_rgbd_extractor

./: .gitignore
src/extract_rgbd/: CMakeLists.txt  package.xml  readme.txt
src/extract_rgbd/launch/: exportImage.launch
src/extract_rgbd/src/: node_d.cpp  node_d8.cpp  node_rgb.cpp
